--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
     <title>React App</title>
   </head>
   <body>
+    <div class="info">
+      <h1>Upcoming events</h1>
+      <p>Search for a city to see events in that area!</p>
+    </div>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
